syntax = "proto3";

package invitation;

option go_package = "generate/invitation";

service InvitationService {
  rpc Invite (InviteRequest) returns (Void);
  rpc RespondInvitation (RespondInvitationRequest) returns (Void);
}

message Void {}

message Invitation {
  string id = 1;
  string composition_id = 2;
  string inviter_id = 3;
  string invitee_id = 4;
  InvitationStatus status = 5;
  string created_at = 6;
  string updated_at = 7;
  int64 deleted_at = 8;
}

enum InvitationStatus {
  PENDING = 0;
  ACCEPTED = 1;
  DECLINED = 2;
}

message InviteRequest {
  string composition_id = 1;
  string inviter_id = 2;
  string invitee_id = 3;
}

message RespondInvitationRequest {
  string id = 1;
  InvitationStatus status = 2;
}
